--- a/zodiacHTML/rooster.html
+++ b/zodiacHTML/rooster.html
@@ -113,6 +113,32 @@
           </td>
         </tr>
       </table>
+      <section class="section-zodiac">
+        <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
+        <p class="zodiac-description">
+          <strong
+            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
+          </strong>
+        </p>
+
+        <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
+        <p class="zodiac-description"></p>
+
+        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
+        <p class="zodiac-description"></p>
+
+        <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
+        <p class="zodiac-description"></p>
+
+        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
+        <p class="zodiac-description"></p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
+        <p class="zodiac-description"></p>
+
+        <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
+        <p class="zodiac-description"></p>
+      </section>
     </div>
   </body>
 </html>
