--- a/zodiacHTML/tiger.html
+++ b/zodiacHTML/tiger.html
@@ -108,6 +108,97 @@
           </td>
         </tr>
       </table>
+      <section class="section-zodiac">
+        <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
+        <p class="zodiac-description">
+          <strong
+            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
+          </strong>
+          Tygrys nie chodzi ścieżkami innych – on je wyznacza. Urodzony, by
+          łamać schematy, żyje intensywnie, kocha bez opamiętania, działa z
+          rozmachem. To znak, który w każdej chwili gotów jest ruszyć naprzód –
+          bez względu na to, co go czeka.<br />
+          Nie czeka na pozwolenie. Nie potrzebuje aplauzu.<br />Tygrys sam jest
+          powodem, dla którego świat przyspiesza.<br />To energia ruchu, buntu i
+          nieokiełznanej kreatywności. Tygrys nie znosi stagnacji – potrzebuje
+          horyzontu, który wciąż się oddala, wyzwań, które budzą go do życia. W
+          ciszy się dusi. W chaosie – rozkwita. Jego obecność to fala – potężna,
+          nieprzewidywalna, porywająca.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
+        <p class="zodiac-description">
+          Tygrys to siła niezależna. Charyzmatyczny, pewny siebie, urodzony
+          przywódca – ale nie władca zza biurka. Jego autorytet rodzi się z
+          pasji, a nie z tytułu. Inspiruje, bo sam płonie. Pociąga, bo nie daje
+          się zatrzymać.
+          <br />
+          Nie znosi ram i struktur, które tłumią jego wewnętrzny ogień.
+          Potrzebuje przestrzeni – fizycznej i duchowej. Decyzje podejmuje
+          sercem, instynktownie, z niepokojącą trafnością. A kiedy życie rzuca
+          mu wyzwanie – nie cofa się. Ryczy. Skacze. Zdobywa.<br />
+          Tygrys nie znosi przeciętności. Albo wszystko – albo nic.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Działa intuicyjnie – czasem z zaskakującą skutecznością, czasem z
+          rozmachem graniczącym z ryzykiem. Nie trzyma się kurczowo budżetów –
+          inwestuje w idee, marzenia, wizje. Potrafi zarobić dużo – i równie
+          dużo stracić, jeśli coś przestaje go inspirować. Dla Tygrysa pieniądze
+          to nie cel – to narzędzie wolności.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
+        <p class="zodiac-description">
+          Tygrys kocha tak, jak żyje – całym sobą. Z pasją, z ogniem, bez
+          półśrodków.<br />
+          Zanim znajdzie prawdziwego partnera, może przeżyć wiele przygód – ale
+          żadna z nich nie będzie płytka.<br />
+
+          Szukasz stabilności? To nie u niego. Szukasz życia, które pulsuje
+          emocjami – podążaj za Tygrysem.<br />
+          Wierność? Tak, jeśli ją wybierze. Zdrada? Tylko wtedy, gdy go
+          zdradzono zaufaniem.<br />
+
+          Związek z Tygrysem to taniec – czasem dziki, czasem zmysłowy, nigdy
+          nudny.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
+        <p class="zodiac-description">
+          Uwodziciel z błyskiem w oku. Pełen pomysłów, wewnętrznie niespokojny,
+          magnetyczny.<br />
+          Pociąga, ale nie daje się złapać.<br />
+          W pracy – kreator, nie wykonawca.<br />
+          W miłości – płomień, który potrafi spalić, ale i rozświetlić życie.<br />
+          Największa siła? Umiejętność podnoszenia się po każdej porażce – i
+          ruszania dalej, jakby nigdy nie upadł.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
+        <p class="zodiac-description">
+          Zjawiskowa. Niezależna. Nieujarzmiona.<br />
+          Wie, czego chce – i nie pyta, czy może.<br />
+          Nie szuka podziwu – ale przyciąga go jak ogień przyciąga ćmy.<br />
+          W miłości namiętna, ale wymagająca. Potrzebuje partnera, który nie
+          tylko ją zachwyci, ale też dotrzyma kroku.<br />
+
+          W pracy – nie do zatrzymania. W życiu – nie do zdefiniowania.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
+        <p class="zodiac-description">
+          Znak Tygrysa to nie przewidywalność – to wolność.<br />
+          To nie spokój – lecz dynamika.<br />
+          To nie kompromis – lecz autentyczność.<br />
+
+          Jeśli pragniesz życia, które nie zna granic – podążaj tropem
+          Tygrysa.<br />
+          Ale pamiętaj: to nie on cię oswoi.<br />
+          To ty musisz być gotów, by dotrzymać mu kroku.
+        </p>
+      </section>
     </div>
   </body>
 </html>
