--- a/zodiacHTML/dragon.html
+++ b/zodiacHTML/dragon.html
@@ -104,28 +104,98 @@
       <section class="section-zodiac">
         <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
         <p class="zodiac-description">
-          <strong
-            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
-          </strong>
+          <strong>
+            Władca wizji, ognia i siły – uosobienie charyzmy, dumny samotnik
+            marzeń </strong
+          ><br />Smok nie prosi o uwagę – on ją pochłania. To nie tylko znak, to
+          zjawisko. Tam, gdzie się pojawia, dzieje się coś więcej niż obecność –
+          pojawia się moc. Urodzony, by prowadzić, inspirować i błyszczeć – Smok
+          żyje na własnych zasadach, nie czekając na pozwolenie.<br />
+
+          To energia twórcza, drapieżna i nieujarzmiona. Smok nie znosi
+          ograniczeń. Jego ambicja nie zna granic, a marzenia są tak wielkie,
+          jak niebo, do którego wzlatuje.
         </p>
 
         <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Smok to istota pełna ognia – charyzmatyczna, dumna i niezależna. Myśli
+          odważnie, działa z rozmachem, nie zadowala się przeciętnością. Lubi
+          mieć kontrolę – nad sobą, światem i kierunkiem, w jakim zmierza jego
+          życie.<br />
 
-        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
-        <p class="zodiac-description"></p>
+          Jego słowa potrafią być ostre jak miecz – szczerość Smoka nie zna
+          dyplomacji. To siła, ale i pułapka: nieokiełznana natura Smoka może
+          prowadzić do samotności, jeśli nie nauczy się pokory wobec innych.<br />
+
+          Pod tą twardą powierzchnią skrywa się jednak dusza idealisty –
+          wizjonera, który pragnie zostawić po sobie coś wielkiego.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Smok i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Smok kocha luksus, piękno i rzeczy wyjątkowe. Ma naturalny zmysł do
+          pieniędzy, ale traktuje je nie jako cel, lecz narzędzie – do
+          realizacji własnych wizji.<br />
+
+          Nie boi się ryzyka, a jego odwaga często prowadzi do spektakularnych
+          sukcesów – choć czasem także do bolesnych strat. Potrzebuje równowagi
+          między odwagą a refleksją.<br />
+
+          Gdy zaufa swojej strategicznej intuicji, potrafi stworzyć imperium.
+        </p>
 
         <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          W miłości Smok jest intensywny, namiętny, trudny do zapomnienia.
+          Uwodzi naturalnym magnetyzmem, przyciąga jak ogień w nocy. Pragnie
+          partnera, który go podziwia – ale nie przytłacza. Uwielbia być w
+          centrum uwagi i potrzebuje uznania, by czuć się kochanym.<br />
 
-        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Jednocześnie może być zazdrosny, drażliwy, a gdy nie dostaje dość
+          uwagi – odsuwa się w dumie i milczeniu.<br />
 
-        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Kocha z rozmachem, ale musi nauczyć się kochać również w ciszy – nie
+          tylko w świetle reflektorów.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Mężczyzna Smok</strong></h4>
+        <p class="zodiac-description">
+          Charyzmatyczny lider, który wchodzi do pokoju i momentalnie staje się
+          jego osią. Ma wielkie ambicje i pragnienie uznania. Lubi być
+          podziwiany, ale nie znosi krytyki – woli otaczać się tymi, którzy go
+          wspierają.<br />
+          W relacjach – namiętny, dumny, intensywny. Potrzebuje partnerki, która
+          nie będzie go ograniczać, ale też nie zniknie w jego cieniu.<br />
+
+          W pracy – twórca, przywódca, wizjoner. Najlepiej czuje się tam, gdzie
+          może wyznaczać nowe kierunki.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Smok</strong></h4>
+        <p class="zodiac-description">
+          Zjawiskowa, niezależna, odważna. Nie pozwala nikomu kierować swoim
+          życiem. Jej wewnętrzna siła i naturalna elegancja przyciągają
+          spojrzenia, ale to jej ambicja czyni ją niepowstrzymaną.<br />
+
+          W miłości – wymagająca, magnetyczna, pełna pasji. Potrzebuje partnera,
+          który dorówna jej intensywnością i nie będzie próbował jej
+          zmieniać.<br />
+
+          W pracy – walczy o swoje. Tworzy, inspiruje, dąży do doskonałości.
+          Smok nie zadowala się sukcesem – chce tworzyć własną legendę.
+        </p>
 
         <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Znak Smoka to siła, która nie przeprasza, że istnieje.<br />
+          To ogień, który nie pyta, czy może płonąć.<br />
+          To wizja, która wyprzedza swój czas.<br />
+
+          Jeśli pragniesz życia, które nie zna kompromisów, marzeń, które
+          sięgają nieba, i odwagi, która nie zna wstydu – Smok jest tym, który
+          otworzy ci bramy wielkości.
+        </p>
       </section>
     </div>
   </body>
