--- a/zodiacHTML/horse.html
+++ b/zodiacHTML/horse.html
@@ -110,28 +110,103 @@
       <section class="section-zodiac">
         <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
         <p class="zodiac-description">
-          <strong
-            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
-          </strong>
+          <strong>
+            Wędrowiec wolności, niepokonany duch przestrzeni, uosobienie ruchu,
+            pasji i niezależności </strong
+          ><br />Koń nie przychodzi – on pędzi. Nie prosi o drogę – sam ją
+          wyznacza. Tam, gdzie inni szukają bezpieczeństwa, on czuje się
+          uwięziony. Koń to znak, który żyje pełnią – sercem bijącym w rytmie
+          przygody, duszą rozpiętą między horyzontami.<br />
+
+          To nie jest energia do ujarzmienia. To wiatr we włosach, ogień w
+          oczach i potrzeba biegu, która nigdy nie cichnie.
         </p>
 
         <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Koń to archetyp niezależności – charyzmatyczny, spontaniczny, pełen
+          entuzjazmu i życia. Nie znosi monotonii, nie cierpi rutyny. Jego
+          żywiołem jest ruch – fizyczny, mentalny, duchowy.<br />
 
-        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
-        <p class="zodiac-description"></p>
+          Jest jak eksplozja radości, siły i odwagi, ale również
+          niecierpliwości. Koń nie znosi stagnacji – musi czuć, że idzie
+          naprzód. Lubi być zauważany, ale nie dla poklasku – lecz dlatego, że
+          jego energia nie daje się zignorować.<br />
+
+          Często działa impulsywnie, ale zawsze z serca. Posiada wielkie
+          marzenia, a jego dusza – choć często nieujarzmiona – nosi w sobie
+          głęboki kodeks lojalności i honoru.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Koń i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Koń nie goni za pieniędzmi – goni za wolnością, a pieniądze są tylko
+          środkiem do jej osiągnięcia. Lubi mieć niezależność finansową, ale nie
+          będzie rezygnował z pasji tylko po to, by ją zdobyć.<br />
+
+          Potrafi być hojny – nie tylko materialnie, ale też emocjonalnie. Jeśli
+          zarabia – dzieli się. Jeśli daje – daje z rozmachem. Koń inwestuje nie
+          tyle w konta bankowe, co w doświadczenia, które zostają z nim na
+          zawsze.<br />
+
+          Wolność, a nie bogactwo, jest jego prawdziwym skarbem.
+        </p>
 
         <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          W miłości Koń jest intensywny, czarujący, czasem trudny do uchwycenia.
+          Uwodzi naturalnością, spontanicznością i autentyczną radością życia.
+          Jego serce kocha silnie – ale tylko w przestrzeni, która pozwala mu
+          oddychać.<br />
 
-        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Jest lojalny, jeśli czuje się wolny. Próba ograniczenia go kończy się
+          ucieczką – bez słowa, bez wyjaśnień. Koń kocha całym sobą, ale nie
+          znosi zależności. Wymaga partnerstwa opartego na zaufaniu, swobodzie i
+          wspólnej pasji.<br />
 
-        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Potrzebuje kogoś, kto nadąży za jego rytmem – nie po to, by go
+          doganiać, lecz by biec obok.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Mężczyzna Koń</strong></h4>
+        <p class="zodiac-description">
+          Urodzony zdobywca – pełen magnetyzmu, spontaniczności i odwagi. Jego
+          urok nie potrzebuje słów – wystarczy obecność. Lubi relacje lekkie i
+          swobodne, ale jeśli spotka kobietę, która rozumie jego potrzebę
+          wolności – potrafi się zaangażować całym sercem.<br />
+
+          W pracy – błyszczy tam, gdzie trzeba działać szybko, kreatywnie i poza
+          schematem. Nie znosi kontroli, ale potrafi inspirować i pociągać za
+          sobą innych z naturalnym wdziękiem.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Koń</strong></h4>
+        <p class="zodiac-description">
+          Zjawiskowa, silna, niezależna. Jej energia płynie z wnętrza – nie
+          trzeba jej podkreślać. Idzie własną drogą, nie oglądając się na
+          oczekiwania. Odważna w wyborach, niepokorna w duchu, wierna sobie.<br />
+
+          W miłości – fascynująca, ale niełatwa. Pragnie namiętności, ale nie
+          znosi zaborczości. Potrzebuje partnera, który będzie jej towarzyszył,
+          nie więził. Jej dusza to przestrzeń, która nie znosi ciasnoty – ani
+          tej emocjonalnej, ani tej życiowej.<br />
+
+          W pracy – błyszczy tam, gdzie może wyrazić siebie, tworzyć,
+          inspirować. Nigdy nie stanie się trybikiem – bo jest żywiołem.
+        </p>
 
         <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Koń to ruch, który nie ustaje.<br />
+          To serce, które wybija rytm wolności.<br />
+          To życie, które nie chce być „poukładane”, lecz przeżyte –
+          intensywnie, autentycznie, bez żalu.<br />
+
+          Jeśli pragniesz partnerstwa z ogniem, z przestrzenią i z prawdą – Koń
+          poprowadzi Cię drogą, na której nigdy nie będziesz się nudzić. Ale
+          musisz wiedzieć jedno: nie próbuj go zatrzymać.<br />
+          Bo Koń – nawet jeśli kocha – zawsze biegnie dalej.
+        </p>
       </section>
     </div>
   </body>
