--- a/zodiacHTML/snake.html
+++ b/zodiacHTML/snake.html
@@ -115,27 +115,105 @@
         <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
         <p class="zodiac-description">
           <strong
-            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
-          </strong>
+            >Strażnik tajemnicy, mistrz strategii, uosobienie wyrafinowanej
+            inteligencji i milczącej mocy </strong
+          ><br />Wąż nie wchodzi – on pojawia się. Bez hałasu, bez zbędnych
+          słów. Jego obecność czuje się zanim się go zobaczy, a jego spojrzenie
+          przenika na wskroś. To nie jest znak, który krzyczy. To znak, który
+          wie.<br />
+
+          Otoczony aurą tajemnicy, Wąż porusza się w świecie z niezwykłą
+          precyzją. Nie potrzebuje zewnętrznego poklasku – liczy się dla niego
+          to, co ukryte, głębokie, prawdziwe. To urodzony taktyk, którego
+          największą bronią jest cisza.
         </p>
 
         <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Wąż to archetyp mądrości – elegancki, przenikliwy, często
+          niedoceniany. Nie działa impulsywnie. Obserwuje. Analizuje. Dopiero
+          wtedy decyduje.<br />
 
-        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
-        <p class="zodiac-description"></p>
+          Jego inteligencja jest chłodna i przenikliwa, często owiana
+          filozoficzną głębią. To znak, który nie ufa łatwo – ale jeśli już
+          obdarzy kogoś zaufaniem, potrafi być lojalny do bólu. Jego pamięć jest
+          jak księga – nie zapomina zdrady, ale też nie rozdaje pochopnie
+          swojego zaufania.<br />
+
+          Wąż lubi mieć kontrolę, lecz nie narzuca jej – woli subtelną grę
+          wpływów i sugestii. Jest jak cichy strateg, który zawsze zna kilka
+          ruchów do przodu.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Wąż i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          W młodości Wąż lubi otaczać się pięknem i przyjemnościami – ale z
+          wiekiem jego podejście się zmienia. Zaczyna rozumieć wartość
+          stabilności, oszczędności i wpływu.<br />
+
+          Pieniądze traktuje jako narzędzie – do ochrony swojej niezależności,
+          do realizacji wizji, do zachowania elegancji i siły. Nie lubi, gdy
+          ktoś ingeruje w jego finanse – sam najlepiej wie, jak nimi
+          zarządzać.<br />
+
+          Zdolny do długoterminowego planowania, potrafi zbudować majątek w
+          ciszy – bez fajerwerków, ale z niezłomną skutecznością.
+        </p>
 
         <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Wąż w miłości jest fascynujący i wymagający. Uwodzi nie słowami, lecz
+          spojrzeniem – głębokim, hipnotyzującym, niepokojącym. Jego bliskość
+          daje poczucie wybrania, a jego milczenie – potrafi być bardziej
+          intensywne niż cudze wyznania.<br />
 
-        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Potrzebuje lojalności – absolutnej. Bywa zazdrosny, niekiedy zaborczy.
+          W relacji szuka bezpieczeństwa, ale też przestrzeni – nie znosi
+          emocjonalnego chaosu. Kiedy czuje się zdradzony, nie krzyczy –
+          odchodzi w lodowatej ciszy.<br />
 
-        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Kocha intensywnie, ale nie zawsze łatwo – wymaga dojrzałości, odwagi i
+          autentyczności.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Mężczyzna Wąż</strong></h4>
+        <p class="zodiac-description">
+          Zmysłowy, enigmatyczny, z natury cichy przywódca. Jego urok nie wynika
+          z ekstrawagancji, ale z wewnętrznego spokoju i przenikliwej
+          inteligencji.<br />
+
+          W relacjach – z jednej strony magnetyczny i opiekuńczy, z drugiej –
+          trudny do rozszyfrowania. Lubi kobiety inteligentne, niezależne, ale
+          nie toleruje kłamstw ani gier.<br />
+
+          W pracy – doskonały strateg, analityk, dyplomata. Potrafi osiągać
+          cele, nie pokazując broni.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Wąż</strong></h4>
+        <p class="zodiac-description">
+          Olśniewająca bez wysiłku. Pełna wdzięku, ale niepokojąca. Wchodzi do
+          pomieszczenia jak sen, z którego nie można się wybudzić.<br />
+
+          Jej umysł jest jak ostrze – precyzyjny, szybki, niezawodny. Doskonale
+          wyczuwa intencje innych, a jej intuicja graniczy z proroctwem. W
+          relacjach – wymagająca, lojalna, niezależna. Pragnie partnera, który
+          nie będzie próbował jej ujarzmić – ale też nie pozwoli się
+          zdominować.<br />
+
+          W życiu zawodowym – błyszczy w rolach, gdzie trzeba planować, chronić
+          tajemnice i budować siłę w cieniu.
+        </p>
 
         <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Znak Węża to cisza, która mówi najwięcej.<br />
+          To spojrzenie, które widzi więcej niż słowa.<br />
+          To strategia, która działa zanim się zacznie.<br />
+
+          Jeśli pragniesz głębi, subtelności i siły ukrytej za spokojem – Wąż
+          pokaże Ci drogę, która nie prowadzi przez tłum, ale prosto do sedna.
+        </p>
       </section>
     </div>
   </body>
